# lgtv-rs232-zcline91

./: README.md  pyproject.toml  setup.py
lgtv_rs232/: __init__.py
src/lgtv-rs232-zcline91/: lgtv.py
src/lgtv_rs232/: __init__.py  lgtv.py
