[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lgtv-rs232-zcline91"
version = "0.0.2"
authors = [
    {name = "Zachary Cline", email = "zachcline@gmail.com"}
]
description = "A small package for controlling my LG TV through its serial port"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
dependencies = [
    "serial",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
]

[project.urls]
Homepage = "https://www.example.com"
